After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739748 - Writing Ogg files with ID3v2 comments does not work
Writing Ogg files with ID3v2 comments does not work
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
master
Other All
: Normal normal
: 2.2
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-06 19:17 UTC by David King
Modified: 2014-11-07 08:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description David King 2014-11-06 19:17:15 UTC
This might have worked at some point, but is now broken. The code to check for, and skip over, ID3v2 tags in ogg_tag.c does not propagate the input stream position (after skipping over the tag) to the Ogg reading code in vcedit.c. When writing the file, which requires reading the original Ogg stream, the ID3v2 tag is not skipped over, and the read operation (and therefore the tag writing) fails.

Checking for an ID3v2 tag should probably be moved completely to vcedit.c, maybe with some rules for (as an example) reading the tag, but only if there are no Vorbis comments present. It would also make sense to remove the ID3v2 tag when writing (which may have been the intention of the pre-GFile Ogg tagging code).
Comment 1 David King 2014-11-07 08:44:08 UTC
Fixed on master as 03418dd249116b985e114023622fccdc426d904a. The bug was caused by a change to use GFile when reading Ogg tags, which caused any error from ogg_sync_pageout(), including one where more data should be read from the stream, to be a hard failure, when it should have continued.