Fix skipping over ID3v2 tags in Ogg files

According to the documentation for ogg_sync_pageout(), a return value of
-1 means that bytes were skipped, and so it is fine to continue reading.
Fixes writing to Ogg files where an ID3v2 tag is present.

https://bugzilla.gnome.org/show_bug.cgi?id=739748